--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 	<script	type="text/javascript" src="js/app.js"></script>
 </head>
 <body ng-controller="bombermanController as control" ng-keydown="">
-	<div class="bombermanPj"></div>
+	<div class="image bombermanPj"></div>
 </body>
 </html>
