--- a/index.html
+++ b/index.html
@@ -6,9 +6,14 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css"/>
 	<script type='text/javascript' src='js/jquery-1.11.1.js'></script>
 	<script type="text/javascript" src="js/angular.min.js"></script>
-	<script	type="text/javascript" src="js/bomberman-app.js"></script>
-	<script type="text/javascript" src="js/bomberman-map.js"></script>
-	<script type="text/javascript" src="js/bomberman-directive.js"></script>
+	<script	type="text/javascript" src="js/app/bomberman-app.js"></script>
+	<script type="text/javascript" src="js/app/Map/bomberman-map.js"></script>	
+	<script type="text/javascript" src="js/app/Map/bricks-service.js"></script>
+	<script type="text/javascript" src="js/app/Map/boxes-service.js"></script>
+	<script type="text/javascript" src="js/app/Powers/fireUp-service.js"></script>
+	<script type="text/javascript" src="js/app/Enemy/enemy-service.js"></script>
+	<script type="text/javascript" src="js/app/Bomb/bomb-service.js"></script>
+	<script type="text/javascript" src="js/app/bomberman-directive.js"></script>
 	<script type="text/javascript" src="js/modal_dialog.js"></script>
 </head>
 <body ng-controller="bombermanController as control" ng-keydown="">
