--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	<script type="text/javascript" src="js/app/Map/bricks-service.js"></script>
 	<script type="text/javascript" src="js/app/Map/boxes-service.js"></script>
 	<script type="text/javascript" src="js/app/Powers/fireUp-service.js"></script>
+	<script type="text/javascript" src="js/app/Powers/bombUp-service.js"></script>
 	<script type="text/javascript" src="js/app/Enemy/enemy-service.js"></script>
 	<script type="text/javascript" src="js/app/Bomb/bomb-service.js"></script>
 	<script type="text/javascript" src="js/app/bomberman-directive.js"></script>
