--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		- Level: {{map_type}}<br>
 		- Lives: <div class="liveHeart" ng-repeat="i in getLives() track by $index"></div></br>
 		- Fire length: <div class="fireLength" ng-repeat="j in getFireLength() track by $index"></div></br>
-		- Bomb limit: <div class="bombLimit" ng-repeat="z in getBombLimit() track by $index"></div></br>
+		- Bombs limit: <div class="bombLimit" ng-repeat="z in getBombLimit() track by $index"></div></br>
 		- Enemies left: {{enemiesLeft}}<br>
 		- Soft bricks left: {{boxesLeft}}<br>
 	</div>
