--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title>Bomberman</title>
 	<meta name="author" content="Sergio Ortega"/>
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css"/>
+	<link rel="icon" type="image/png" href="assets/img/Bomberman-pink.png">
 	<script type='text/javascript' src='assets/libs/jquery-1.11.1.js'></script>
 	<script type="text/javascript" src="assets/libs/angular.min.js"></script>
 	<script	type="text/javascript" src="app/bomberman-app.js"></script>
